ui/src/pages/DataAnalysis/OfflineManager/components/IntegratedConfiguration/CustomCollapse/index.less
.CustomCollapse {
  display: flex;
  flex-direction: column;
  margin-top: 20px;
  padding: 0 20px;
  .titleBox {
    display: flex;
    overflow: hidden;
    background-color: #f8c3a6;
    border-radius: 2px;
    cursor: pointer;

    .titleIconOpen {
      animation: rotatingOpen 0.5s forwards;
    }
    .titleIconClose {
      transform: rotate(90deg);
      animation: rotatingClose 0.5s forwards;
    }

    .title {
      padding: 0 10px;
      color: #fff;
      background-color: #ef7c3e;
      border-radius: 2px;
    }
  }
  .content {
  }
}

@keyframes rotatingOpen {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(90deg);
  }
}

@keyframes rotatingClose {
    0% {
        transform: rotate(90deg);
    }
    100% {
      transform: rotate(0);
    }
}

